SUBDIRS = util io
bin_PROGRAMS = AUTODRONE

AUTODRONE_LDFLAGS = -L./util
AUTODRONE_LDFLAGS = -L./io

AUTODRONE_LDADD = -lutil
AUTODRONE_LDADD = -ldrone

AUTODRONE_CFLAGS =  -I ./util
AUTODRONE_CFLAGS =  -I ./io

AUTODRONE_DEPENDENCIES = ./util/libutil.a
AUTODRONE_DEPENDENCIES = ./io/libdrone.a
AUTODRONE_SOURCES = main.c
